White Space Issue

--- a/style.css
+++ b/style.css
@@ -15,3 +15,7 @@ body {
 td.box {
  padding-right: 30px;
 }
+
+td {
+  white-space: nowrap;
+}
